feat(02_ejercicio): listado regiones

--- a/apps/world-bank/src/app/pages/home/home.component.html
+++ b/apps/world-bank/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<section *ngIf="regions.length > 0">
+  <curso-performance-angular-info
+    [regions]="regions"
+    (gone)="goToRegion($event)"
+  >
+  </curso-performance-angular-info>
+</section>
