--- a/apps/world-bank/src/styles.scss
+++ b/apps/world-bank/src/styles.scss
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container {
+  margin-top: 50px;
+  margin-bottom: 100px;
+  width: 100%;
+  height: 90vh;
+}
