feat(02_ejercicio): información país

--- a/apps/world-bank/src/app/pages/country/country.component.html
+++ b/apps/world-bank/src/app/pages/country/country.component.html
@@ -1,1 +1,6 @@
-<p>country works!</p>
+<header>
+  <h2>Información de:</h2>
+</header>
+<section *ngIf="country">
+  <curso-performance-angular-country-view [country]="country"></curso-performance-angular-country-view>
+</section>
