--- a/apps/world-bank/src/app/pages/country/country.component.html
+++ b/apps/world-bank/src/app/pages/country/country.component.html
@@ -2,5 +2,7 @@
   <h2>Información de:</h2>
 </header>
 <section *ngIf="country">
-  <curso-performance-angular-country-view [country]="country"></curso-performance-angular-country-view>
+  <curso-performance-angular-country-view
+    [country]="country"
+  ></curso-performance-angular-country-view>
 </section>
