--- a/apps/world-bank/src/app/pages/region/components/region-view/region-view.component.html
+++ b/apps/world-bank/src/app/pages/region/components/region-view/region-view.component.html
@@ -1,10 +1,17 @@
-<header>
+<ng-template #header>
   <h2>Listado Países</h2>
-</header>
-<main>
+</ng-template>
+
+<ng-template #main>
   <curso-performance-angular-country-info
     [countries]="countries"
     (goTo)="goToCountry($event)"
   >
   </curso-performance-angular-country-info>
-</main>
+</ng-template>
+
+<curso-performance-angular-main-info-template
+  [header]="header"
+  [main]="main"
+>
+</curso-performance-angular-main-info-template>
