--- a/libs/ui/src/lib/greetings/greetings.component.html
+++ b/libs/ui/src/lib/greetings/greetings.component.html
@@ -3,5 +3,5 @@
   <p>
     <input type="text" #saludar>
   </p>
-  <button (click)="saludar(saludar.value)">Saludar</button>
+  <button (click)="greetings(saludar.value)">Saludar</button>
 </section>
