style(07_app-shell): añadido loading a app-shell

--- a/apps/world-bank/src/app/app-shell/app-shell.component.html
+++ b/apps/world-bank/src/app/app-shell/app-shell.component.html
@@ -1,1 +1,4 @@
-<p>app-shell works!</p>
+<div class="cssload-container">
+  <div class="cssload-speeding-wheel"></div>
+  <span>The application is loading..</span>
+</div>
